--- a/scss/media.scss
+++ b/scss/media.scss
@@ -145,7 +145,7 @@
       gap: 10px;
 
       &-skill {
-        padding: 30px 0;
+        // padding: 30px 0;
 
         .icon i {
           font-size: 35px;
