--- a/css/media.css
+++ b/css/media.css
@@ -1,310 +1,1 @@
-/* MOBILE (S) DEVICES (PHONE, less than 375px) */
-@media (max-width: 374.98px) {
-  .hero__wrapper {
-    grid-template-columns: repeat(8, 1fr);
-    grid-gap: 28px !important;
-  }
-  .hero__content {
-    grid-area: 2/1/2/8;
-    width: 100%;
-    text-align: center;
-  }
-  .hero__content h1 {
-    margin: 0 auto;
-    width: 10ch;
-  }
-  .hero__content p {
-    margin: 20px 0 40px;
-    padding: 0 5px;
-    width: 100%;
-    line-height: 27px;
-  }
-  .hero__image {
-    grid-area: 1/1/1/12;
-  }
-  .footer__copywrite {
-    font-size: 10px;
-  }
-}
-/* MOBILE (L - M) DEVICES (PORTRAIT PHONE, less than 576px) */
-@media (max-width: 575.98px) {
-  .btn {
-    padding: 13px 15px;
-  }
-  .header {
-    padding: 10px 0;
-    height: 55px;
-  }
-  .header__logo img {
-    height: 35px;
-  }
-  .header__nav {
-    display: none;
-  }
-  .header__btn {
-    display: none;
-  }
-  .header__hamburgermenu-icon {
-    display: block;
-  }
-  .header__hamburgermenu-icon i {
-    font-size: 28px;
-  }
-  .hamburgermenu {
-    height: calc(100svh - 55px);
-  }
-  .hero {
-    height: 100%;
-  }
-  .hero.section-padding {
-    padding: 40px 0;
-  }
-  .hero__wrapper {
-    grid-template-columns: repeat(8, 1fr);
-    grid-gap: 30px;
-  }
-  .hero__content {
-    grid-area: 2/1/2/12;
-    width: 100%;
-    text-align: center;
-  }
-  .hero__content h1 {
-    margin: 0 auto;
-    width: 10ch;
-  }
-  .hero__content p {
-    margin: 20px 0 40px;
-    width: 100%;
-    line-height: 27px;
-  }
-  .hero__image {
-    grid-area: 1/1/1/12;
-  }
-  .hero__image img {
-    display: block;
-  }
-  .hero__social {
-    display: none;
-  }
-  .about {
-    height: 100%;
-  }
-  .about__wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .about__left-social i {
-    font-size: 30px;
-  }
-  .about__right {
-    gap: 10px;
-  }
-  .about__right-skill .icon i {
-    font-size: 35px;
-  }
-  .project__filter-boxes {
-    margin: 60px 0 40px;
-  }
-  .project__filter-box {
-    width: 300px;
-    height: 250px;
-  }
-  .project__filter-box .overlay {
-    place-content: center;
-  }
-  .project__filter-box .overlay i {
-    font-size: 20px;
-  }
-  .service__wrapper {
-    gap: 30px;
-  }
-  .service__wrapper-box {
-    width: 100%;
-  }
-  .contact {
-    padding: 40px 0;
-  }
-  .contact__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    gap: 50px;
-    padding: 5px;
-    width: 90%;
-  }
-  .contact__info, .contact__form {
-    width: 100%;
-  }
-  .contact__info {
-    gap: 30px;
-  }
-  .contact__info-box {
-    gap: 10px;
-  }
-}
-/* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .header__nav {
-    display: none;
-  }
-  .header__btn {
-    display: none;
-  }
-  .header__hamburgermenu-icon {
-    display: block;
-  }
-  .hero {
-    height: 100%;
-  }
-  .hero.section-padding {
-    padding: 50px 0;
-  }
-  .hero__wrapper {
-    grid-gap: 40px;
-  }
-  .hero__content {
-    grid-area: 2/1/3/13;
-  }
-  .hero__content h1 {
-    width: 10ch;
-  }
-  .hero__content p {
-    width: 100%;
-  }
-  .hero__image {
-    grid-area: 1/3/1/11;
-  }
-  .hero__social {
-    grid-area: 1/12;
-    align-self: center;
-  }
-  .about {
-    height: 100%;
-  }
-  .about__wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .about__left-social i {
-    font-size: 30px;
-  }
-  .service__wrapper {
-    gap: 30px;
-  }
-  .service__wrapper-box {
-    width: 100%;
-  }
-  .contact__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    gap: 60px;
-    padding: 20px;
-  }
-  .contact__info, .contact__form {
-    width: 100%;
-  }
-}
-/* MEDIUM DEVICES (TABLETS, 768px and up) */
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .header__nav {
-    display: none;
-  }
-  .header__btn {
-    display: none;
-  }
-  .header__hamburgermenu-icon {
-    display: block;
-  }
-  .hero {
-    height: 100%;
-  }
-  .hero__wrapper {
-    grid-gap: 40px;
-  }
-  .hero__content {
-    grid-area: 2/1/3/13;
-    text-align: center;
-  }
-  .hero h1 {
-    margin: 0 auto;
-    width: 10ch;
-  }
-  .hero p {
-    margin: 20px auto 50px;
-  }
-  .hero__image {
-    grid-area: 1/3/1/11;
-  }
-  .hero__social {
-    grid-area: 1/12;
-    align-self: center;
-  }
-  .about {
-    height: 100%;
-  }
-  .about__wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .about__left-social i {
-    font-size: 30px;
-  }
-  .project__filter-box {
-    width: 300px;
-    height: 300px;
-  }
-  .service__wrapper-box {
-    width: 48%;
-  }
-  .contact__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    gap: 60px;
-    padding: 20px;
-  }
-  .contact__info, .contact__form {
-    width: 100%;
-  }
-}
-/* LARGE DEVICES (DESKTOPS, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .section-padding {
-    padding: 20px 0;
-  }
-  .header__nav ul {
-    gap: 30px;
-  }
-  .hero {
-    place-content: center;
-  }
-  .service__wrapper-box {
-    width: 48%;
-  }
-}
-/* EXTRA LARGE DEVICES (LARGE DESKTOPS, 1200px and up) */
-@media (min-width: 1200px) and (max-width: 1399.98px) {
-  .project__filter-box {
-    width: 300px;
-    height: 300px;
-  }
-}
-/* EXTRA EXTRA LARGE DEVICES (LARGE DESKTOPS, 1400px and up) */
-@media (min-width: 1537px) {
-  .hero,
-  .about,
-  .service,
-  .contact {
-    min-height: initial;
-  }
-}
+/* MOBILE (S) DEVICES (PHONE, less than 375px) */ @media (max-width: 374.98px) { .hero__wrapper { grid-template-columns: repeat(8, 1fr); grid-gap: 28px !important; } .hero__content { grid-area: 2/1/2/8; width: 100%; text-align: center; } .hero__content h1 { margin: 0 auto; width: 10ch; } .hero__content p { margin: 20px 0 40px; padding: 0 5px; width: 100%; line-height: 27px; } .hero__image { grid-area: 1/1/1/12; } .footer__copywrite { font-size: 10px; } } /* MOBILE (L - M) DEVICES (PORTRAIT PHONE, less than 576px) */ @media (max-width: 575.98px) { .btn { padding: 13px 15px; } .header { padding: 10px 0; height: 55px; } .header__logo img { height: 35px; } .header__nav { display: none; } .header__btn { display: none; } .header__hamburgermenu-icon { display: block; } .header__hamburgermenu-icon i { font-size: 28px; } .hamburgermenu { height: calc(100svh - 55px); } .hero { height: 100%; } .hero.section-padding { padding: 40px 0; } .hero__wrapper { grid-template-columns: repeat(8, 1fr); grid-gap: 30px; } .hero__content { grid-area: 2/1/2/12; width: 100%; text-align: center; } .hero__content h1 { margin: 0 auto; width: 10ch; } .hero__content p { margin: 20px 0 40px; width: 100%; line-height: 27px; } .hero__image { grid-area: 1/1/1/12; } .hero__image img { display: block; } .hero__social { display: none; } .about { height: 100%; } .about__wrapper { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } .about__left-social i { font-size: 30px; } .about__right { gap: 10px; } .about__right-skill .icon i { font-size: 35px; } .project__filter-boxes { margin: 60px 0 40px; } .project__filter-box { width: 300px; height: 250px; } .project__filter-box .overlay { place-content: center; } .project__filter-box .overlay i { font-size: 20px; } .service__wrapper { gap: 30px; } .service__wrapper-box { width: 100%; } .contact { padding: 40px 0; } .contact__container { -webkit-box-orient: vertical; -webkit-box-direction: reverse; -ms-flex-direction: column-reverse; flex-direction: column-reverse; gap: 50px; padding: 5px; width: 90%; } .contact__info, .contact__form { width: 100%; } .contact__info { gap: 30px; } .contact__info-box { gap: 10px; } } /* SMALL DEVICES (LANSCAPE PHONE, 576px and up) */ @media (min-width: 576px) and (max-width: 767.98px) { .header__nav { display: none; } .header__btn { display: none; } .header__hamburgermenu-icon { display: block; } .hero { height: 100%; } .hero.section-padding { padding: 50px 0; } .hero__wrapper { grid-gap: 40px; } .hero__content { grid-area: 2/1/3/13; } .hero__content h1 { width: 10ch; } .hero__content p { width: 100%; } .hero__image { grid-area: 1/3/1/11; } .hero__social { grid-area: 1/12; align-self: center; } .about { height: 100%; } .about__wrapper { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } .about__left-social i { font-size: 30px; } .service__wrapper { gap: 30px; } .service__wrapper-box { width: 100%; } .contact__container { -webkit-box-orient: vertical; -webkit-box-direction: reverse; -ms-flex-direction: column-reverse; flex-direction: column-reverse; gap: 60px; padding: 20px; } .contact__info, .contact__form { width: 100%; } } /* MEDIUM DEVICES (TABLETS, 768px and up) */ @media (min-width: 768px) and (max-width: 991.98px) { .header__nav { display: none; } .header__btn { display: none; } .header__hamburgermenu-icon { display: block; } .hero { height: 100%; } .hero__wrapper { grid-gap: 40px; } .hero__content { grid-area: 2/1/3/13; text-align: center; } .hero h1 { margin: 0 auto; width: 10ch; } .hero p { margin: 20px auto 50px; } .hero__image { grid-area: 1/3/1/11; } .hero__social { grid-area: 1/12; align-self: center; } .about { height: 100%; } .about__wrapper { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } .about__left-social i { font-size: 30px; } .project__filter-box { width: 300px; height: 300px; } .service__wrapper-box { width: 48%; } .contact__container { -webkit-box-orient: vertical; -webkit-box-direction: reverse; -ms-flex-direction: column-reverse; flex-direction: column-reverse; gap: 60px; padding: 20px; } .contact__info, .contact__form { width: 100%; } } /* LARGE DEVICES (DESKTOPS, 992px and up) */ @media (min-width: 992px) and (max-width: 1199.98px) { .section-padding { padding: 20px 0; } .header__nav ul { gap: 30px; } .hero { place-content: center; } .service__wrapper-box { width: 48%; } } /* EXTRA LARGE DEVICES (LARGE DESKTOPS, 1200px and up) */ @media (min-width: 1200px) and (max-width: 1399.98px) { .project__filter-box { width: 300px; height: 300px; } } /* EXTRA EXTRA LARGE DEVICES (LARGE DESKTOPS, 1400px and up) */ @media (min-width: 1537px) { .hero, .about, .service, .contact { min-height: initial; } }
